tests/sema/fail/v3_fail_while_return.ep
# COMPILE_FAIL: function must return i64 on all paths

fun main(): i64 {
    while true {
        return 1
    }
}
